--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -1,1 +1,13 @@
-
+on: 
+  schedule:
+   - cron: "0 0 * * *"
+  
+jobs:
+   daily-tasks:
+      runs-on : ubuntu-latest
+      steps:
+       - name : print message
+         run : echo "running the scheduled"
+      
+     
+   
