--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -15,4 +15,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: deploy application
-       run: echo "deploying the application..."
+       run: echo "deploying the application to ${{inputs.environment}}"
