--- a/.github/workflows/commandes.yml
+++ b/.github/workflows/commandes.yml
@@ -4,9 +4,7 @@ jobs:
     exemple:
         runs-on: ubuntu-latest
         steps:
-            - name: warning message 
-              run: | # je veux afficher un messg d'erreur 
-                deprecated=true 
-                if [[ deprecated ]]; then
-                echo "::warning:: This is a deprecated message"
-                fi
+            - name: set api key
+              run: echo " API_KEY=1234" >> $GITHUB_ENV
+            - name: user APi key
+              run: echo "using APi key $API_KEY"
